fix layout shifting on vertical overflow

--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Sen", sans-serif;
+  overflow-y: scroll;
 }
 
 header {
@@ -111,14 +112,12 @@ section {
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -157,7 +156,6 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
